feat: add the ability to set the cipher suite and TLS version
This features adds the ability to specify a cipher suite and TLS version
for the node connection. All the supported Kong Gateway cipher suites
can be set except those which are not supported by crypto/tls.
