# openapi.yml
@@ -127,9 +127,25 @@ components:
           type: string
           format: uuid
           example: "123e4567-e89b-12d3-a456-426614174000"
+          description: |
+            The node ID
+        cipher_suite:
+          type: string
+          example: "TLS_ECDHE_RSA_WITH_AES_128_GCM_SHA256"
+          description: |
+            Cipher suite is the TLS cipher suite used when establishing a
+            connection to the control plane.
         hostname:
           type: string
           example: "node1.example-host.com"
+          description: |
+            Hostname is the RFC 1123 hostname of the node.
+        tls_version:
+          type: string
+          example: "TLSv1.2"
+          description: |
+            TLS version is the TLS version used when establishing a connection
+            to the control plane.
         version:
           type: string
           example: "1.2.3"
@@ -143,9 +159,25 @@ components:
           type: string
           format: uuid
           example: "123e4567-e89b-12d3-a456-426614174000"
+          description: |
+            The node ID
+        cipher_suite:
+          type: string
+          example: "TLS_ECDHE_RSA_WITH_AES_128_GCM_SHA256"
+          description: |
+            Cipher suite is the TLS cipher suite used when establishing a
+            connection to the control plane.
         hostname:
           type: string
           example: "node1.example-host.com"
+          description: |
+            Hostname is the RFC 1123 hostname of the node.
+        tls_version:
+          type: string
+          example: "TLSv1.2"
+          description: |
+            TLS version is the TLS version used when establishing a connection
+            to the control plane.
         version:
           type: string
           example: "1.2.3"
@@ -250,10 +282,14 @@ components:
               $ref: '#/components/schemas/HostNode'
           example:
             - id: "123e4567-e89b-12d3-a456-426614174000"
+              cipher_suite: "TLS_ECDHE_RSA_WITH_AES_128_GCM_SHA256"
               hostname: "node1.example-host.com"
+              tls_version: "TLSv1.2"
               version: "1.2.3"
             - id: "223e4567-e89b-12d3-a456-426614174001"
+              cipher_suite: "TLS_ECDHE_RSA_WITH_AES_128_GCM_SHA256"
               hostname: "node2.example-host.com"
+              tls_version: "TLSv1.2"
               version: "1.2.3.1"
     NodeResponse:
       description: |
